2011-08-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* auth-source.el (auth-source-netrc-saver): Make the .authinfo file
	non-world-readable.

2011-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nndraft.el (nndraft-update-unread-articles): Don't send delayed
	articles.

2011-08-13  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-score.el (gnus-all-score-files): Use copy-sequence instead of
	copy-list.

2011-08-12  Sam Steingold  <sds@gnu.org>

	* gnus-score.el (gnus-score-find-alist): Keep the score files already
	in the reverse order to avoid modifying the cache with `nreverse'.
	(gnus-all-score-files): Do not modify the value returned by
	`gnus-score-find-alist' because it lives in a cache variable.
	(gnus-current-home-score-file): No need to `nreverse' the return value
	of `gnus-score-find-alist', it is already in the correct order.

2011-08-11  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-transform-headers): BODYSTRUCTURE for messages of
	type MESSAGE and subtype RFC822 is slightly different from those of
	type TEXT.

2011-08-05  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-sum.el (gnus-summary-refer-article): Warp to article. This
	allows article-referral to work from an nnir group.

2011-08-04  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus.el (registry-ignore): Add nnir groups to the ignore-list.

2011-08-04  Daiki Ueno  <ueno@unixuser.org>

	* mml1991.el (mml1991-epg-find-usable-key)
	(mml1991-epg-find-usable-secret-key): New function.
	(mml1991-epg-sign): Check if signing key is usable.
	(mml1991-epg-encrypt): Check if encrypting key is usable (bug#8955).

2011-08-03  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-read-server-parm): Add an argument to restrict to
	server-variables only. This should fix a bug introduced with commit
	e1889675b7f4adf057833c5513c9374134c4e053.
	(nnir-run-query): 'nnir-search-engine should not be set from the global
	environment.

2011-08-02  Andrew Cohen  <cohen@andy.bu.edu>
